<resources>
    <string name="app_name">AppSecours</string>
<<<<<<< HEAD
    <string name="nom">First Name</string>
    <string name="prenom">Last Name</string>
    <string name="age">Age</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="blood">bloodtype</string>
    <string name="phone">Phone</string>
    <string name="adress">Adress</string>
    <string name="doctor">Your Doctors name</string>
    <string name="drphone">Doctors Phone</string>

=======
    <string name="appwidget_text">Secours </string>
    <string name="add_widget">Add widget</string>
>>>>>>> refs/remotes/origin/Lulu
</resources>
