<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/nom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/nom"
        android:inputType="text"
        android:maxLength="20"
        android:maxLines="1"/>

    <EditText
        android:id="@+id/prenom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/prenom"
        android:inputType="text"
        android:maxEms="20"
        android:minEms="1"
        android:maxLength="20"
        android:maxLines="1"/>

    <EditText
        android:id="@+id/age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/age"
        android:inputType="numberDecimal"
        android:maxLength="2"
        android:maxLines="1"/>

    <RadioGroup
        android:id="@+id/sexe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="Gender"
                android:textSize="18dp"/>

            <RadioButton
                android:id="@+id/male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"/>

            <RadioButton
                android:id="@+id/female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"/>


    </RadioGroup>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="Bloodtype"
            android:textSize="18dp"/>

        <Spinner
            android:id="@+id/blood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:prompt="@string/blood" />
    </LinearLayout>


    <EditText
        android:id="@+id/phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/phone"
        android:inputType="phone"
        android:maxLength="10"/>

    <EditText
        android:id="@+id/adress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/adress"
        android:inputType="phone"
        android:maxLength="10"/>


    <EditText
        android:id="@+id/doctor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/doctor" />

    <EditText
        android:id="@+id/drtel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/drphone"
        android:inputType="phone"
        android:maxLength="10"/>

    <EditText
        android:id="@+id/infoscomp"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:hint="Allergy, antecedent, other details"
        android:inputType="textMultiLine"
        android:maxLines="3"
        android:maxLength="100"/>


    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="submit"/>

</TableLayout>